package Advancer;



public class SpiderAdvancer extends Advancer {

    public  SpiderAdvancer() {
        super(2);
    }

    public void advancePosition(){
        this.actualPosition += 1;
    }

}
