package Plots.Passables;

public interface Passable {

    public boolean areCharacters();
}
